# euler-haskell

./: LICENSE  README.md  euler.cabal
src/: Common.hs  Main.hs
src/Solutions/: Problem001.hs  Problem002.hs  Problem003.hs
test/: TestMain.hs
